fix(announcement bar): better contrast

--- a/src/components/announcement-bar/announcement-bar.scss
+++ b/src/components/announcement-bar/announcement-bar.scss
@@ -22,8 +22,8 @@ announcement-bar {
     90deg,
     #440f14,
     #5e1219 15%,
-    #03060b 35%,
-    #03060b 45%,
+    #000 35%,
+    #000 45%,
     #5e1219 85%,
     #440f14
   );
